Minor changes and improvements.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
-PROJECT(glinfo)
+CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )
+PROJECT(glinfo VERSION 0.9.0 LANGUAGES C)
 
 SET(MAJOR 0)
 SET(MINOR 9)
@@ -14,7 +14,6 @@ IF((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_
 		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 	ENDIF()
 
-	ADD_DEFINITIONS( -Wall -w)
 	IF (CMAKE_BUILD_TYPE STREQUAL "Release")
 		MESSAGE(STATUS "Compile for release.")
 		ADD_DEFINITIONS( -DNDEBUG )
@@ -43,9 +42,16 @@ IF(UNIX)
 	SET(GLINFO_LIBRARIES "-lX11")
 ENDIF (UNIX)
 
+SET(OpenGL_GL_PREFERENCE "GLVND")
+FIND_PACKAGE(OpenGL)
+IF(OPENGL_FOUND)
+    MESSAGE(STATUS "OpenGL found: ${OPENGL_LIBRARIES}.")
+ENDIF()
+
 #
 ADD_EXECUTABLE(glinfo ${source} ${glsrc})
-TARGET_LINK_LIBRARIES(glinfo -lGL ${GLINFO_LIBRARIES})
+TARGET_LINK_LIBRARIES(glinfo GL ${GLINFO_LIBRARIES} ${OPENGL_LIBRARIES})
+TARGET_INCLUDE_DIRECTORIES(glinfo PRIVATE ${OPENGL_INCLUDE_DIR})
 INSTALL(TARGETS glinfo DESTINATION bin)
 
 IF( UNIX )	
