--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CMake
+name: glinfo
 
 on: [push]
 
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Configure dependencies
+      run: |
+        sudo apt-get install libgl1-mesa-dev mesa-common-dev
+
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
