--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Configure dependencies
       run: |
-        sudo apt-get install libgl1-mesa-dev mesa-common-dev
+        sudo apt-get install libglu1-mesa libglu1-mesa-dev libgl1-mesa-glx libgl1-mesa-dev
 
 
     - name: Create Build Environment
