--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )
-PROJECT(glinfo VERSION 0.9.0 LANGUAGES C)
+CMAKE_MINIMUM_REQUIRED( VERSION 3.9 )
+PROJECT(glinfo)
 
 SET(MAJOR 0)
 SET(MINOR 9)
@@ -8,50 +8,22 @@ SET(STATE a)
 SET(VERSION ${MAJOR}.${MINOR}${STATE}${PATCH} )
 ADD_DEFINITIONS(-DGLIF_VERSION="${VERSION}")
 
-# gcc compiler flags
-IF((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)
-  	IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8) # -fPIC is only required
-		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-	ENDIF()
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore EXCLUDE_FROM_ALL)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/imageloader EXCLUDE_FROM_ALL)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/window EXCLUDE_FROM_ALL)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/window/sdl EXCLUDE_FROM_ALL)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/renderer EXCLUDE_FROM_ALL)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/fragcore/modules/renderer/opengl EXCLUDE_FROM_ALL)
 
-	IF (CMAKE_BUILD_TYPE STREQUAL "Release")
-		MESSAGE(STATUS "Compile for release.")
-		ADD_DEFINITIONS( -DNDEBUG )
-		ADD_DEFINITIONS( -O2 )
-		SET(CMAKE_RELEASE TRUE)
-	ELSE()
-		MESSAGE(STATUS "Compile for debug.")
-		ADD_DEFINITIONS( -D_DEBUG )
-		ADD_DEFINITIONS( -g3 -O0 )
-		SET(CMAKE_DEBUG TRUE)
-	ENDIF()
-endif()
 
-FILE(GLOB source ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
-		${CMAKE_CURRENT_SOURCE_DIR}/src/argument.c)
-
-# Windows context source file.
-IF (WIN32)
-	FILE(GLOB glsrc ${CMAKE_CURRENT_SOURCE_DIR}/src/wgl_context.c )
-	SET(GLINFO_LIBRARIES STRIP "")
-ENDIF (WIN32)
-
-# Unix context source file.
-IF(UNIX)
-	FILE(GLOB glsrc ${CMAKE_CURRENT_SOURCE_DIR}/src/glx_context.c)
-	SET(GLINFO_LIBRARIES "-lX11")
-ENDIF (UNIX)
-
-SET(OpenGL_GL_PREFERENCE "GLVND")
-FIND_PACKAGE(OpenGL)
-IF(OPENGL_FOUND)
-    MESSAGE(STATUS "OpenGL found: ${OPENGL_LIBRARIES}.")
-ENDIF()
+FILE(GLOB source ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/src/argument.cpp)
 
 #
 ADD_EXECUTABLE(glinfo ${source} ${glsrc})
-TARGET_LINK_LIBRARIES(glinfo GL ${GLINFO_LIBRARIES} ${OPENGL_LIBRARIES})
-TARGET_INCLUDE_DIRECTORIES(glinfo PRIVATE ${OPENGL_INCLUDE_DIR})
+TARGET_LINK_LIBRARIES(glinfo fragcore fragcore-rgl)
+TARGET_INCLUDE_DIRECTORIES(glinfo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
 INSTALL(TARGETS glinfo DESTINATION bin)
 
 IF( UNIX )	
