--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: "recursive"
-        
+
     - name: Configure dependencies
       run: |
-        sudo apt-get install libglu1-mesa libglu1-mesa-dev libgl1-mesa-glx libgl1-mesa-dev
+        sudo apt-get install libglu1-mesa libglu1-mesa-dev libgl1-mesa-glx libgl1-mesa-dev \
+        libsdl2-dev libfreeimage-dev libfreetype6-dev libfmt-dev libeigen3-dev
 
 
     - name: Create Build Environment
