--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -46,3 +46,15 @@ jobs:
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config $BUILD_TYPE
+
+    - name: Build AppImage
+      working-directory: ${{runner.workspace}}
+      shell: bash
+      # Execute the build.  You can specify a specific target with "--target <NAME>"
+      run: cicd/generate_appimage.sh
+      
+    - name: Upload AppImage
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        name: Release AppImage
+        path: build_app/glinfo-x86_64.AppImage
